[013-(0.1.3)] Android Landscape Issue >> Due to the nature of android phones handling of screen resolution, its going to be more difficult to handle mobile landscape orientation since it will overlap with traditional tablet and desktop layouts. Will research a bit. iOS portrait and landscape works smashingly so far! (iPhone XS, iPad Mini 5)

--- a/buttonStyle.css
+++ b/buttonStyle.css
@@ -256,15 +256,15 @@ i{
 
 
 
-/* #### Mobile Phones Portrait or Landscape #### */
-@media screen and (max-device-width: 640px) and (orientation: landscape){
+/* #### Mobile Phones Landscape #### */
+@media screen and (max-device-width: 768px) and (orientation: landscape){
     .controlPanelSection {
         display: grid;
     
         grid-gap: .5rem;
         margin-left: .5rem;
         margin-right: .5rem;
-        margin-top: .5rem;
+        margin-top: 1rem;
     
         padding-bottom: 1rem;
     
